# arbiterAI

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  MOCK_PROVIDER_SUMMARY.md  MOCK_QUICK_REFERENCE.md  PROJECT_PLAN.md  README.md  build.sh  generate.sh  runDocker.sh  run_local.sh  vcpkg.json
.github/: copilot-instructions.md
.github/instructions/: cpp.instructions.md  javascript.instructions.md
.github/workflows/: ci.yml  release-major-minor.yml  release-point.yml
.roo/rules/: 01-project.md  02-build_environment.md
.roo/rules-code/: 01-coding_style.md
cmake/: arbiterAIConfig.cmake.in
configs/defaults/models/: llama.json
docker/: Dockerfile
docs/: api_interface_analysis.md  configuration_architecture.md  developer.md  development.md  development_plan.md  feature_request.md  overview.md  planning_prompt.md  project.md  server.md  testing.md
docs/development/tasks/completed/: 000_establish_process.md  001_init_project.md  001_update_project_md.md  002_core_impl.md  002_verify_providers.md  003_expand_test_coverage.md  003_provider_openai.md  004_provider_anthropic.md  004_setup_build_env.md  005_provider_deepseek.md  006_provider_llama.md  007_provider_openrouter.md  008_example_proxy.md  update_ChatClient.md
docs/old/: ai_agent_project_management.md  configuration_architecture.md  copilot_overview.md  development_plan.md  overview.md  roo_overview.md
docs/tasks/: local_model_management.md
examples/: README.md  mock_example.cpp  mock_models.json  model_config_v2.json  server_config.json
examples/cli/: main.cpp
examples/proxy/: main.cpp
schemas/: model_config.schema.json
scripts/: context_stress_test.sh  version.sh
src/arbiterAI/: arbiterAI.cpp  arbiterAI.h  cacheManager.cpp  cacheManager.h  chatClient.cpp  chatClient.h  configDownloader.cpp  configDownloader.h  costManager.cpp  costManager.h  fileVerifier.cpp  fileVerifier.h  hardwareDetector.cpp  hardwareDetector.h  modelDownloader.cpp  modelDownloader.h  modelFitCalculator.cpp  modelFitCalculator.h  modelManager.cpp  modelManager.h  modelRuntime.cpp  modelRuntime.h  storageManager.cpp  storageManager.h  telemetryCollector.cpp  telemetryCollector.h  utils.h  version.h.in
src/arbiterAI/providers/: anthropic.cpp  anthropic.h  baseProvider.cpp  baseProvider.h  deepseek.cpp  deepseek.h  llama.cpp  llama.h  llamaInterface.cpp  llamaInterface.h  mock.cpp  mock.h  openai.cpp  openai.h  openrouter.cpp  openrouter.h
src/hermesaxiom/: fileVerifier.cpp  fileVerifier.h  hermesaxiom.cpp  hermesaxiom.h  modelDownloader.cpp  modelDownloader.h  modelManager.cpp  modelManager.h  utils.h
src/hermesaxiom/providers/: anthropic.cpp  anthropic.h  anthropic_llm.cpp  anthropic_llm.h  baseProvider.cpp  baseProvider.h  base_llm.cpp  base_llm.h  deepseek.cpp  deepseek.h  deepseek_llm.cpp  deepseek_llm.h  llama.cpp  llama.h  llamaInterface.cpp  llamaInterface.h  llama_llm.cpp  llama_llm.h  llama_provider.cpp  llama_provider.h  openai.cpp  openai.h  openai_llm.cpp  openai_llm.h
src/server/: dashboard.h  dashboardConfig.h  logBuffer.h  main.cpp  routes.cpp  routes.h
tests/: arbiterAITests.cpp  chatClientTests.cpp  configDownloaderTests.cpp  hardwareDetectorTests.cpp  llamaProviderTests.cpp  mockProviderTests.cpp  modelDownloaderTests.cpp  modelManagerTests.cpp  modelRuntimeTests.cpp  providerTests.cpp  serverConnectTests.cpp  storageManagerTests.cpp  telemetryCollectorTests.cpp
tmp/: github_action_log.txt
vcpkg/custom_ports/llama-cpp/: portfile.cmake  vcpkg.json
